# macmonica

./: .gitignore  LICENSE  README.md  com.macmonica.agent.plist  com.sysmon.agent.plist  pyproject.toml  setup.sh
.github/workflows/: ci.yml  publish.yml
macmonica/: __main__.py  alerts.py  blame.py  collector.py  compare.py  config.py  dashboard.py  db.py  digest.py  doctor.py  export.py  history.py  macos.py  recommendations.py  report.py  top.py  why.py
sysmon/: __main__.py  alerts.py  collector.py  compare.py  config.py  dashboard.py  db.py  digest.py  history.py  macos.py
